tests/baselines/reference/overloadOnConstNoAnyImplementation(strict=true).errors.txt
overloadOnConstNoAnyImplementation.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.
overloadOnConstNoAnyImplementation.ts(1,10): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
overloadOnConstNoAnyImplementation.ts(2,10): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
overloadOnConstNoAnyImplementation.ts(9,8): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
overloadOnConstNoAnyImplementation.ts(12,10): error TS7051: Parameter has a name but no type. Did you mean 'arg0: number'?


==== overloadOnConstNoAnyImplementation.ts (5 errors) ====
    function x1(a: number, cb: (x: 'hi') => number);
             ~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 overloadOnConstNoAnyImplementation.ts:3:10: The implementation signature is declared here.
             ~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
    function x1(a: number, cb: (x: 'bye') => number);
             ~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
    function x1(a: number, cb: (x: string) => number) {
        cb('hi');
        cb('bye');
        var hm = 'hm';
        cb(hm);
        cb('uh');
        cb(1); // error
           ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    }
    
    var cb: (number) => number = (x: number) => 1;
             ~~~~~~
!!! error TS7051: Parameter has a name but no type. Did you mean 'arg0: number'?
    x1(1, cb);
    x1(1, (x: 'hi') => 1); // error
    x1(1, (x: string) => 1);